--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "verbb/scheduler",
     "description": "Schedule jobs to be executed on a given date.",
     "type": "craft-plugin",
-    "version": "4.0.0-beta.1",
+    "version": "4.0.0",
     "keywords": [
         "craft",
         "cms",
@@ -30,8 +30,8 @@
     ],
     "require": {
         "php": "^8.2",
-        "craftcms/cms": "^5.0.0-beta.1",
-        "verbb/base": "^3.0.0-beta.1"
+        "craftcms/cms": "^5.0.0",
+        "verbb/base": "^3.0.0"
     },
     "autoload": {
         "psr-4": {
